@@ -24,6 +24,8 @@
         <fastcsv.version>3.4.0</fastcsv.version>
         <jackson.version>2.18.3</jackson.version>
         <zstd.version>1.5.6-3</zstd.version>
+        <arrow.version>19.0.0</arrow.version>
+        <vortex.version>0.72.0</vortex.version>
         <junit.version>5.11.4</junit.version>
     </properties>
 
@@ -52,6 +54,28 @@
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
             <version>${jackson.version}</version>
+        </dependency>
+
+        <!-- Vortex -->
+        <dependency>
+            <groupId>dev.vortex</groupId>
+            <artifactId>vortex-jni</artifactId>
+            <version>${vortex.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.arrow</groupId>
+            <artifactId>arrow-vector</artifactId>
+            <version>${arrow.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.arrow</groupId>
+            <artifactId>arrow-c-data</artifactId>
+            <version>${arrow.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.arrow</groupId>
+            <artifactId>arrow-memory-unsafe</artifactId>
+            <version>${arrow.version}</version>
         </dependency>
 
         <!-- Parquet -->
@@ -107,6 +131,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.2</version>
+                <configuration>
+                    <argLine>--add-opens java.base/java.nio=ALL-UNNAMED</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
